--- a/index.html
+++ b/index.html
@@ -24,6 +24,31 @@
   </script>
 </head>
 <body>
-    
+    <main class="max-w-screen-lg mx-auto px-16 lg:px-28">
+      <header class="flex pt-10 mb-20">
+        <div>
+           <h1 class="text-5xl md:text-7xl">It's good <br> 
+            tea time at The <br> Tea House</h1>
+            <br>
+            <p class="text-gray-500 w-3/4">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.</p>
+            <br>
+            <button class="bg-gradient-to-r from-orange-500 to-red-500 w-50 h-16 px-4 py-3 rounded-lg text-white font-bold">Explore More <i class="fa-solid fa-arrow-right -rotate-45 text-xl"></i></button>
+        </div>
+        <div class="relative">
+            <div>
+                <img class="w-full" src="images/banner.png" alt="">
+            </div>
+            <div class="flex items-center bg-white shadow-lg px-2 py-2 md:px-6 md:py-4 absolute lg:top-64 left-20">
+                <div>
+                    <i class="fa-solid fa-star text-[#FFC850] text-2xl"></i>
+                </div>
+                <div class="ml-2">
+                    <h2 class="lg:text-2xl font-bold">5.00</h2>
+                    <p class="text-gray-500">Trust Pilot Ratings</p>
+                </div>
+            </div>
+        </div>
+      </header>
+    </main>
 </body>
 </html>
