--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 <body>
     <main class="max-w-screen-lg mx-auto px-16 lg:px-28">
-      <header class="flex pt-10 mb-20">
+      <header class="md:flex pt-10 mb-20">
         <div>
            <h1 class="text-5xl md:text-7xl">It's good <br> 
             tea time at The <br> Tea House</h1>
@@ -49,6 +49,71 @@
             </div>
         </div>
       </header>
+      <section class="py-16">
+            <div class="text-center mb-8 ">
+                <h1 class="mb-4 text-5xl font-bold">Our Featured Products</h1>
+                <p class="text-gray-500">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+            </div>
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4  gap-6 text-center">
+                <div class="rounded-lg shadow-lg bg-gray-100 overflow-hidden">
+                 <img class="mx-auto pt-2" src="images/tea-1.png" alt="">
+                <div class="px-1 py-2">
+                    <h3 class="text-xl font-bold">Milk Tea</h3>
+                <p class="text-gray-500">Creamer could be replaced by fresh milk</p>    
+                </div>
+              </div>
+                <div class="rounded-lg shadow-lg bg-gray-100 overflow-hidden">
+                 <img class="mx-auto pt-2" src="images/tea-2.png" alt="">
+                <div class="px-1 py-2">
+                    <h3 class="text-xl font-bold">Black Tea</h3>
+                <p class="text-gray-500">Creamer could be replaced by fresh milk</p>    
+                </div>
+              </div>
+                <div class="rounded-lg shadow-lg bg-gray-100 overflow-hidden">
+                 <img class="mx-auto pt-2" src="images/tea-3.png" alt="">
+                <div class="px-1 py-2">
+                    <h3 class="text-xl font-bold">Lemon Tea</h3>
+                <p class="text-gray-500">Creamer could be replaced by fresh milk</p>    
+                </div>
+              </div>
+                <div class="rounded-lg shadow-lg bg-gray-100 overflow-hidden">
+                 <img class="mx-auto pt-2" src="images/tea-4.png" alt="">
+                <div class="px-1 py-2">
+                    <h3 class="text-xl font-bold">Green Tea</h3>
+                <p class="text-gray-500">Creamer could be replaced by fresh milk</p>    
+                </div>
+              </div>
+            </div>
+      </section>
+      <section class="py-8 lg:py 16">
+      </section>
+
+      <section class="mb-20">
+         <div class="grid grid-cols-1 sm:gap-10 lg:grid-cols-2">
+            <div class="grid grid-cols-2 grid-rows-3 gap-4 lg:w-5/6">
+              <div class="h-30 bg-gradient-to-r from-red-100 to-red-50 rounded-xl">
+              </div>
+              <div class="bg-orange-50 rounded-xl row-span-2">
+                <img class="mx-auto my-7" src="images/fresh-1.png" alt="">
+              </div>
+              <div class="bg-stone-200 rounded-xl row-span-2">
+                <img class="mx-auto my-7" src="images/fresh-2.png" alt="">
+              </div>
+              <div class="h-30 bg-gradient-to-r from-stone-200 to-stone-100 rounded-xl">
+            </div>
+            </div>
+            <div>
+                <h1 class="text-5xl font-bold mb-5">Great Tea, Freshly Presented</h1>
+                <p class="text-gray-500">The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.</p>
+                <br>
+                <h3 class="text-2xl font-bold mb-5">Unique Taste</h3>
+                <p class="text-gray-500">A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
+                <br>
+                <h3 class="text-2xl font-bold mb-5">Premium Quality</h3>
+                <p class="text-gray-500">Premium Quality that makes tea more elegant and more durable when you use it.</p>
+            </div>
+         </div>
+      </section>
     </main>
 </body>
 </html>
