--- a/index.html
+++ b/index.html
@@ -113,6 +113,51 @@
                 <p class="text-gray-500">Premium Quality that makes tea more elegant and more durable when you use it.</p>
             </div>
          </div>
+      </section class="mb-20">
+        <div class="bg-gradient-to-r from-orange-500 to-red-600 h-40 rounded-xl grid grid-cols-1 lg:grid-cols-2 text-white px-4 lg:px-10 h-full">
+            <div class="w-5/6 py-10">
+                <h1 class="text-5xl font-bold mb-5 mt-7">Meet Our Super <br> Clients</h1>
+                <br>
+                <p class="mb-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+                <br>
+                <button class="bg-white text-orange-700 py-2 px-3 rounded-lg font-bold">Show All</button>
+            </div>
+
+            <div class="relative py-8 px-8">
+               <div class="relative left-10 lg:left-16 h-auto bg-white text-black rounded-lg w-full py-8 px-10 opacity-40">
+                <p class="text-gray-500">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                <br>
+                <h3 class="text-2xl font-bold">Ilham Yuda</h3>
+                <p class="text-gray-500">Businessman</p>
+                <div class="absolute -top-5 -left-5">
+                  <img src="images/client.png" alt="">
+                </div>
+               </div>
+
+               <div class="relative top-6 left-10 lg:left-16 h-auto bg-white text-black rounded-lg w-full py-8 px-10 opacity-40">
+                <p class="text-gray-500">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                <br>
+                <h3 class="text-2xl font-bold">Ilham Yuda</h3>
+                <p class="text-gray-500">Businessman</p>
+                <div class="absolute -top-5 -left-5">
+                  <img src="images/client.png" alt="">
+                </div>
+               </div>
+              <div class="absolute bottom-36 -left-8"> 
+                <div class="relative  h-auto bg-white text-black rounded-lg w-full py-8 px-10">
+                    <p class="text-gray-500">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                    <br>
+                    <h3 class="text-2xl font-bold">Ilham Yuda</h3>
+                    <p class="text-gray-500">Businessman</p>
+                    <div class="absolute -top-5 -left-5">
+                      <img src="images/client.png" alt="">
+                    </div>
+                   </div>
+              </div>
+            </div>
+        </div>
+      <section >
+
       </section>
     </main>
 </body>
