--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                   <img src="images/client.png" alt="">
                 </div>
                </div>
-              <div class="absolute bottom-36 -left-8"> 
+              <div class="absolute bottom-36 md:-left-8"> 
                 <div class="relative  h-auto bg-white text-black rounded-lg w-full py-8 px-10">
                     <p class="text-gray-500">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
                     <br>
@@ -157,8 +157,60 @@
             </div>
         </div>
       <section >
-
       </section>
     </main>
+    <footer class="bg-orange-100  mt-20 text-gray-700 py-10 px-4 md:px-16">
+        <div class="w-9/12 mx-auto">
+            <div class="mb-8 flex justify-between">
+                <img class="mb-8" src="images/cup.png" alt="">
+                <div class="flex items-center gap-8">
+                    <h5 class="font-bold">Ready to get started?</h5>
+                    <button class="bg-gradient-to-r from-orange-500 to-red-500 w-50 h-12 px-4 py-3 rounded-lg text-white font-bold">Get Started</button>
+                </div>
+            </div>
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4">
+                <div>
+                    <h3 class="font-semibold text-lg mb-4">Quick Links</h3>
+                    <ul class="space-y-2">
+                       <li><a class="hover:text-orange-600" href="">Home</a></li>
+                       <li><a class="hover:text-orange-600" href="">About</a></li>
+                       <li><a class="hover:text-orange-600" href="">Insurance</a></li>
+                       <li><a class="hover:text-orange-600" href="">Privacy Policy</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <h3 class="font-semibold text-lg mb-4">Our Service</h3>
+                    <ul class="space-y-2">
+                       <li><a class="hover:text-orange-600" href="">Life Insurance</a></li>
+                       <li><a class="hover:text-orange-600" href="">Car insurance</a></li>
+                       <li><a class="hover:text-orange-600" href="">Health Insurance</a></li>
+                       <li><a class="hover:text-orange-600" href="">House Insurance</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <h3 class="font-semibold text-lg mb-4">Help</h3>
+                    <ul class="space-y-2">
+                       <li><a class="hover:text-orange-600" href="">Faq</a></li>
+                       <li><a class="hover:text-orange-600" href="">Contact Us</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <h3 class="font-semibold text-lg mb-4">Subscribe to our Newsletter</h3>
+                    <div class="flex space-y-2">
+                      <input placeholder="Email address" type="text" class="bg-transparent border-b-2 border-black w-4/6 md:w-5/6">
+                      <i class="fa-solid fa-chevron-right w-7 h-7 bg-orange-600 rounded-full text-white flex justify-center items-center"></i>
+                    </div>
+                    <div class="flex justify-between w-2/5 mt-8 mb-2">
+                        <i class="fa-brands fa-facebook"></i>
+                        <i class="fa-brands fa-twitter"></i>
+                        <i class="fa-brands fa-square-instagram"></i>
+                      </div>
+                </div>
+            </div>
+           <div class="text-center pt-4 mt-4">
+             <p class="text-sm text-gray-600">© 2027 UIDesign.to - All rights reserved.</p>
+           </div>
+        </div>
+    </footer>
 </body>
 </html>
